go/vt/sqlparser/y.output

state 0
	$accept: .any_command $end 
	command: .    (23)

	SELECT  shift 24
	STREAM  shift 25
	INSERT  shift 52
	UPDATE  shift 27
	DELETE  shift 28
	DESC  shift 43
	SET  shift 29
	LOCK  shift 48
	UNLOCK  shift 49
	USE  shift 38
	'('  shift 54
	CREATE  shift 31
	ALTER  shift 32
	DROP  shift 34
	RENAME  shift 33
	ANALYZE  shift 36
	SHOW  shift 37
	DESCRIBE  shift 44
	EXPLAIN  shift 45
	REPAIR  shift 46
	OPTIMIZE  shift 47
	TRUNCATE  shift 35
	BEGIN  shift 39
	START  shift 40
	COMMIT  shift 41
	ROLLBACK  shift 42
	REPLACE  shift 53
	LOAD  shift 50
	.  reduce 23 (src line 348)

	command  goto 2
	select_statement  goto 3
	base_select  goto 22
	union_lhs  goto 23
	stream_statement  goto 4
	insert_statement  goto 5
	update_statement  goto 6
	delete_statement  goto 7
	set_statement  goto 8
	create_statement  goto 9
	alter_statement  goto 10
	rename_statement  goto 11
	drop_statement  goto 12
	truncate_statement  goto 13
	create_table_prefix  goto 30
	analyze_statement  goto 14
	show_statement  goto 15
	use_statement  goto 16
	other_statement  goto 20
	begin_statement  goto 17
	commit_statement  goto 18
	rollback_statement  goto 19
	insert_or_replace  goto 26
	load_data_statement  goto 21
	any_command  goto 1
	openb  goto 51

state 1
	$accept:  any_command.$end 

	$end  accept
	.  error


state 2
	any_command:  command.semicolon_opt 
	semicolon_opt: .    (2)

	';'  shift 56
	.  reduce 2 (src line 321)

	semicolon_opt  goto 55

state 3
	command:  select_statement.    (4)
	union_lhs:  select_statement.    (29)

	UNION  reduce 29 (src line 384)
	.  reduce 4 (src line 325)


state 4
	command:  stream_statement.    (5)

	.  reduce 5 (src line 330)


state 5
	command:  insert_statement.    (6)

	.  reduce 6 (src line 331)


state 6
	command:  update_statement.    (7)

	.  reduce 7 (src line 332)


state 7
	command:  delete_statement.    (8)

	.  reduce 8 (src line 333)


state 8
	command:  set_statement.    (9)

	.  reduce 9 (src line 334)


state 9
	command:  create_statement.    (10)

	.  reduce 10 (src line 335)


state 10
	command:  alter_statement.    (11)

	.  reduce 11 (src line 336)


state 11
	command:  rename_statement.    (12)

	.  reduce 12 (src line 337)


state 12
	command:  drop_statement.    (13)

	.  reduce 13 (src line 338)


state 13
	command:  truncate_statement.    (14)

	.  reduce 14 (src line 339)


state 14
	command:  analyze_statement.    (15)

	.  reduce 15 (src line 340)


state 15
	command:  show_statement.    (16)

	.  reduce 16 (src line 341)


state 16
	command:  use_statement.    (17)

	.  reduce 17 (src line 342)


state 17
	command:  begin_statement.    (18)

	.  reduce 18 (src line 343)


state 18
	command:  commit_statement.    (19)

	.  reduce 19 (src line 344)


state 19
	command:  rollback_statement.    (20)

	.  reduce 20 (src line 345)


state 20
	command:  other_statement.    (21)

	.  reduce 21 (src line 346)


state 21
	command:  load_data_statement.    (22)

	.  reduce 22 (src line 347)


state 22
	select_statement:  base_select.order_by_opt limit_opt lock_opt 
	order_by_opt: .    (537)

	ORDER  shift 58
	.  reduce 537 (src line 2768)

	order_by_opt  goto 57

state 23
	select_statement:  union_lhs.union_op union_rhs order_by_opt limit_opt lock_opt 

	UNION  shift 60
	.  error

	union_op  goto 59

state 24
	select_statement:  SELECT.comment_opt cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT.comment_opt cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 61
	$$305  goto 62

state 25
	stream_statement:  STREAM.comment_opt select_expression FROM table_name 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 63
	$$305  goto 62

state 26
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name opt_partition_clause insert_data on_dup_opt 
	insert_statement:  insert_or_replace.comment_opt ignore_opt into_table_name opt_partition_clause SET update_list on_dup_opt 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 64
	$$305  goto 62

state 27
	update_statement:  UPDATE.comment_opt table_references SET update_list where_expression_opt order_by_opt limit_opt 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 65
	$$305  goto 62

state 28
	delete_statement:  DELETE.comment_opt FROM table_name opt_partition_clause where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE.comment_opt FROM table_name_list USING table_references where_expression_opt 
	delete_statement:  DELETE.comment_opt table_name_list from_or_using table_references where_expression_opt 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 66
	$$305  goto 62

state 29
	set_statement:  SET.comment_opt set_list 
	set_statement:  SET.comment_opt set_session_or_global set_list 
	set_statement:  SET.comment_opt set_session_or_global TRANSACTION transaction_chars 
	set_statement:  SET.comment_opt TRANSACTION transaction_chars 
	$$305: .    (305)

	.  reduce 305 (src line 1723)

	comment_opt  goto 67
	$$305  goto 62

state 30
	create_statement:  create_table_prefix.table_spec 

	'('  shift 69
	.  error

	table_spec  goto 68

state 31
	create_statement:  CREATE.constraint_opt INDEX ID using_opt ON table_name ddl_force_eof 
	create_statement:  CREATE.VIEW table_name ddl_force_eof 
	create_statement:  CREATE.OR REPLACE VIEW table_name ddl_force_eof 
	create_statement:  CREATE.VINDEX sql_id vindex_type_opt vindex_params_opt 
	create_statement:  CREATE.DATABASE not_exists_opt ID ddl_force_eof 
	create_statement:  CREATE.SCHEMA not_exists_opt ID ddl_force_eof 
	create_table_prefix:  CREATE.TABLE not_exists_opt table_name 
	constraint_opt: .    (609)

	OFFSET  shift 132
	DUPLICATE  shift 100
	KEYS  shift 114
	LAST_INSERT_ID  shift 116
	SHARE  shift 150
	MODE  shift 125
	ID  shift 79
	COMMENT_KEYWORD  shift 92
	OR  shift 72
	SCHEMA  shift 75
	TABLE  shift 76
	VIEW  shift 71
	UNIQUE  shift 77
	PRIMARY  shift 138
	SPATIAL  shift 153
	FULLTEXT  shift 105
	FOREIGN  shift 104
	REFERENCES  shift 143
	KEY_BLOCK_SIZE  shift 113
	DATE  shift 95
	REPAIR  shift 145
	OPTIMIZE  shift 134
	TRUNCATE  shift 165
	PARTITION  shift 135
	REORGANIZE  shift 144
	LESS  shift 117
	THAN  shift 157
	PROCEDURE  shift 139
	TRIGGER  shift 164
	VINDEX  shift 73
	VINDEXES  shift 172
	STATUS  shift 155
	VARIABLES  shift 171
	BEGIN  shift 82
	START  shift 154
	TRANSACTION  shift 163
	COMMIT  shift 93
	ROLLBACK  shift 147
	BIT  shift 84
	TINYINT  shift 161
	SMALLINT  shift 152
	MEDIUMINT  shift 123
	INT  shift 109
	INTEGER  shift 110
	BIGINT  shift 83
	REAL  shift 142
	DOUBLE  shift 99
	FLOAT_TYPE  shift 103
	DECIMAL  shift 98
	NUMERIC  shift 131
	TIME  shift 158
	TIMESTAMP  shift 159
	DATETIME  shift 96
	YEAR  shift 179
	CHAR  shift 87
	VARCHAR  shift 170
	BOOL  shift 86
	CHARACTER  shift 88
	VARBINARY  shift 169
	NCHAR  shift 130
	TEXT  shift 156
	TINYTEXT  shift 162
	MEDIUMTEXT  shift 124
	LONGTEXT  shift 121
	BLOB  shift 85
	TINYBLOB  shift 160
	MEDIUMBLOB  shift 122
	LONGBLOB  shift 120
	JSON  shift 112
	ENUM  shift 101
	GEOMETRY  shift 106
	POINT  shift 136
	LINESTRING  shift 119
	POLYGON  shift 137
	GEOMETRYCOLLECTION  shift 107
	MULTIPOINT  shift 127
	MULTILINESTRING  shift 126
	MULTIPOLYGON  shift 128
	SIGNED  shift 151
	UNSIGNED  shift 167
	ZEROFILL  shift 180
	COLLATION  shift 90
	VITESS_KEYSPACES  shift 173
	VITESS_SHARDS  shift 174
	VITESS_TABLETS  shift 175
	VSCHEMA_TABLES  shift 176
	COLUMNS  shift 91
	NAMES  shift 129
	CHARSET  shift 89
	GLOBAL  shift 108
	SESSION  shift 148
	ISOLATION  shift 111
	LEVEL  shift 118
	READ  shift 141
	WRITE  shift 178
	ONLY  shift 133
	REPEATABLE  shift 146
	COMMITTED  shift 94
	UNCOMMITTED  shift 166
	SERIALIZABLE  shift 149
	DATABASE  shift 74
	AGAINST  shift 81
	LANGUAGE  shift 115
	WITH  shift 177
	QUERY  shift 140
	EXPANSION  shift 102
	UNUSED  shift 168
	DATA  shift 97
	.  reduce 609 (src line 3059)

	constraint_opt  goto 70
	non_reserved_keyword  goto 80
	sql_id  goto 78

state 32
	alter_statement:  ALTER.ignore_opt TABLE table_name non_add_drop_or_rename_operation force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name ADD alter_object_type force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name DROP alter_object_type force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name ADD VINDEX sql_id '(' column_list ')' vindex_type_opt vindex_params_opt 
	alter_statement:  ALTER.ignore_opt TABLE table_name DROP VINDEX sql_id 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME to_opt table_name 
	alter_statement:  ALTER.ignore_opt TABLE table_name RENAME index_opt force_eof 
	alter_statement:  ALTER.VIEW table_name ddl_force_eof 
	alter_statement:  ALTER.ignore_opt TABLE table_name partition_operation 
	ignore_opt: .    (592)

	VIEW  shift 182
	IGNORE  shift 183
	.  reduce 592 (src line 3019)

	ignore_opt  goto 181

state 33
	rename_statement:  RENAME.TABLE table_name TO table_name 

	TABLE  shift 184
	.  error


state 34
	drop_statement:  DROP.TABLE exists_opt table_name 
	drop_statement:  DROP.INDEX ID ON table_name ddl_force_eof 
	drop_statement:  DROP.VIEW exists_opt table_name ddl_force_eof 
	drop_statement:  DROP.DATABASE exists_opt ID 
	drop_statement:  DROP.SCHEMA exists_opt ID 

	SCHEMA  shift 189
	TABLE  shift 185
	INDEX  shift 186
	VIEW  shift 187
	DATABASE  shift 188
	.  error


state 35
	truncate_statement:  TRUNCATE.TABLE table_name 
	truncate_statement:  TRUNCATE.table_name 

	OFFSET  shift 132
	DUPLICATE  shift 100
	KEYS  shift 114
	LAST_INSERT_ID  shift 116
	SHARE  shift 150
	MODE  shift 125
	ID  shift 193
	COMMENT_KEYWORD  shift 92
	TABLE  shift 190
	VIEW  shift 195
	PRIMARY  shift 138
	SPATIAL  shift 153
	FULLTEXT  shift 105
	FOREIGN  shift 104
	REFERENCES  shift 143
	KEY_BLOCK_SIZE  shift 113
	DATE  shift 95
	REPAIR  shift 145
	OPTIMIZE  shift 134
	TRUNCATE  shift 165
	PARTITION  shift 135
	REORGANIZE  shift 144
	LESS  shift 117
	THAN  shift 157
	PROCEDURE  shift 139
	TRIGGER  shift 164
	VINDEX  shift 196
	VINDEXES  shift 172
	STATUS  shift 155
	VARIABLES  shift 171
	BEGIN  shift 82
	START  shift 154
	TRANSACTION  shift 163
	COMMIT  shift 93
	ROLLBACK  shift 147
	BIT  shift 84
	TINYINT  shift 161
	SMALLINT  shift 152
	MEDIUMINT  shift 123
	INT  shift 109
	INTEGER  shift 110
	BIGINT  shift 83
	REAL  shift 142
	DOUBLE  shift 99
	FLOAT_TYPE  shift 103
	DECIMAL  shift 98
	NUMERIC  shift 131
	TIME  shift 158
	TIMESTAMP  shift 159
	DATETIME  shift 96
	YEAR  shift 179
	CHAR  shift 87
	VARCHAR  shift 170
	BOOL  shift 86
	CHARACTER  shift 88
	VARBINARY  shift 169
	NCHAR  shift 130
	TEXT  shift 156
	TINYTEXT  shift 162
	MEDIUMTEXT  shift 124
	LONGTEXT  shift 121
	BLOB  shift 85
	TINYBLOB  shift 160
	MEDIUMBLOB  shift 122
	LONGBLOB  shift 120
	JSON  shift 112
	ENUM  shift 101
	GEOMETRY  shift 106
	POINT  shift 136
	LINESTRING  shift 119
	POLYGON  shift 137
	GEOMETRYCOLLECTION  shift 107
	MULTIPOINT  shift 127
	MULTILINESTRING  shift 126
	MULTIPOLYGON  shift 128
	SIGNED  shift 151
	UNSIGNED  shift 167
	ZEROFILL  shift 180
	COLLATION  shift 90
	VITESS_KEYSPACES  shift 173
	VITESS_SHARDS  shift 174
	VITESS_TABLETS  shift 175
	VSCHEMA_TABLES  shift 176
	COLUMNS  shift 91
	NAMES  shift 129
	CHARSET  shift 89
	GLOBAL  shift 108
	SESSION  shift 148
	ISOLATION  shift 111
	LEVEL  shift 118
	READ  shift 141
	WRITE  shift 178
	ONLY  shift 133
	REPEATABLE  shift 146
	COMMITTED  shift 94
	UNCOMMITTED  shift 166
	SERIALIZABLE  shift 149
	AGAINST  shift 81
	LANGUAGE  shift 115
	WITH  shift 177
	QUERY  shift 140
	EXPANSION  shift 102
	UNUSED  shift 168
	DATA  shift 97
	.  error

	table_name  goto 191
	non_reserved_keyword  goto 194
	table_id  goto 192

state 36
	analyze_statement:  ANALYZE.TABLE table_name 

	TABLE  shift 197
	.  error


state 37
	show_statement:  SHOW.BINARY ID ddl_force_eof 
	show_statement:  SHOW.CHARACTER SET ddl_force_eof 
	show_statement:  SHOW.CREATE DATABASE ddl_force_eof 
	show_statement:  SHOW.CREATE ID ddl_force_eof 
	show_statement:  SHOW.CREATE PROCEDURE ddl_force_eof 
	show_statement:  SHOW.CREATE TABLE ddl_force_eof 
	show_statement:  SHOW.CREATE TRIGGER ddl_force_eof 
	show_statement:  SHOW.CREATE VIEW ddl_force_eof 
	show_statement:  SHOW.DATABASES ddl_force_eof 
	show_statement:  SHOW.INDEX ddl_force_eof 
	show_statement:  SHOW.KEYS ddl_force_eof 
	show_statement:  SHOW.PROCEDURE ddl_force_eof 
	show_statement:  SHOW.show_session_or_global STATUS ddl_force_eof 
	show_statement:  SHOW.TABLE ddl_force_eof 
	show_statement:  SHOW.full_opt COLUMNS FROM table_name from_database_opt like_or_where_opt 
	show_statement:  SHOW.full_opt tables_or_processlist from_database_opt like_or_where_opt 
	show_statement:  SHOW.show_session_or_global VARIABLES ddl_force_eof 
	show_statement:  SHOW.VINDEXES 
	show_statement:  SHOW.COLLATION 
	show_statement:  SHOW.COLLATION WHERE expression 
	show_statement:  SHOW.VINDEXES ON table_name 
	show_statement:  SHOW.VITESS_KEYSPACES 
	show_statement:  SHOW.VITESS_SHARDS 
	show_statement:  SHOW.VITESS_TABLETS 
	show_statement:  SHOW.VSCHEMA_TABLES 
	show_statement:  SHOW.ID ddl_force_eof 
	show_session_or_global: .    (289)
	full_opt: .    (281)

	KEYS  shift 203
	ID  shift 214
	BINARY  shift 198
	CREATE  shift 200
	TABLE  shift 206
	INDEX  shift 202
	PROCEDURE  shift 204
	VINDEXES  shift 208
	STATUS  reduce 289 (src line 1647)
	VARIABLES  reduce 289 (src line 1647)
	CHARACTER  shift 199
	COLLATION  shift 209
	DATABASES  shift 201
	VITESS_KEYSPACES  shift 210
	VITESS_SHARDS  shift 211
	VITESS_TABLETS  shift 212
	VSCHEMA_TABLES  shift 213
	FULL  shift 217
	GLOBAL  shift 216
	SESSION  shift 215
	.  reduce 281 (src line 1609)

	full_opt  goto 207
	show_session_or_global  goto 205

state 38
	use_statement:  USE.table_id 
	use_statement:  USE.    (293)

	OFFSET  shift 132
	DUPLICATE  shift 100
	KEYS  shift 114
	LAST_INSERT_ID  shift 116
	SHARE  shift 150
	MODE  shift 125
	ID  shift 193
	COMMENT_KEYWORD  shift 92
	VIEW  shift 195
	PRIMARY  shift 138
	SPATIAL  shift 153
	FULLTEXT  shift 105
	FOREIGN  shift 104
	REFERENCES  shift 143
	KEY_BLOCK_SIZE  shift 113
	DATE  shift 95
	REPAIR  shift 145
	OPTIMIZE  shift 134
	TRUNCATE  shift 165
	PARTITION  shift 135
	REORGANIZE  shift 144
	LESS  shift 117
	THAN  shift 157
	PROCEDURE  shift 139
	TRIGGER  shift 164
	VINDEX  shift 196
	VINDEXES  shift 172
	STATUS  shift 155
	VARIABLES  shift 171
	BEGIN  shift 82
	START  shift 154
	TRANSACTION  shift 163
	COMMIT  shift 93
	ROLLBACK  shift 147
	BIT  shift 84
	TINYINT  shift 161
	SMALLINT  shift 152
	MEDIUMINT  shift 123
	INT  shift 109
	INTEGER  shift 110
	BIGINT  shift 83
	REAL  shift 142
	DOUBLE  shift 99
	FLOAT_TYPE  shift 103
	DECIMAL  shift 98
	NUMERIC  shift 131
	TIME  shift 158
	TIMESTAMP  shift 159
	DATETIME  shift 96
	YEAR  shift 179
	CHAR  shift 87
	VARCHAR  shift 170
	BOOL  shift 86
	CHARACTER  shift 88
	VARBINARY  shift 169
	NCHAR  shift 130
	TEXT  shift 156
	TINYTEXT  shift 162
	MEDIUMTEXT  shift 124
	LONGTEXT  shift 121
	BLOB  shift 85
	TINYBLOB  shift 160
	MEDIUMBLOB  shift 122
	LONGBLOB  shift 120
	JSON  shift 112
	ENUM  shift 101
	GEOMETRY  shift 106
	POINT  shift 136
	LINESTRING  shift 119
	POLYGON  shift 137
	GEOMETRYCOLLECTION  shift 107
	MULTIPOINT  shift 127
	MULTILINESTRING  shift 126
	MULTIPOLYGON  shift 128
	SIGNED  shift 151
	UNSIGNED  shift 167
	ZEROFILL  shift 180
	COLLATION  shift 90
	VITESS_KEYSPACES  shift 173
	VITESS_SHARDS  shift 174
	VITESS_TABLETS  shift 175
	VSCHEMA_TABLES  shift 176
	COLUMNS  shift 91
	NAMES  shift 129
	CHARSET  shift 89
	GLOBAL  shift 108
	SESSION  shift 148
	ISOLATION  shift 111
	LEVEL  shift 118
	READ  shift 141
	WRITE  shift 178
	ONLY  shift 133
	REPEATABLE  shift 146
	COMMITTED  shift 94
	UNCOMMITTED  shift 166
	SERIALIZABLE  shift 149
	AGAINST  shift 81
	LANGUAGE  shift 115
	WITH  shift 177
	QUERY  shift 140
	EXPANSION  shift 102
	UNUSED  shift 168
	DATA  shift 97
	.  reduce 293 (src line 1666)

	non_reserved_keyword  goto 194
	table_id  goto 218

state 39
	begin_statement:  BEGIN.    (294)

	.  reduce 294 (src line 1671)


state 40
	begin_statement:  START.TRANSACTION 

	TRANSACTION  shift 219
	.  error


state 41
	commit_statement:  COMMIT.    (296)

	.  reduce 296 (src line 1681)


state 42
	rollback_statement:  ROLLBACK.    (297)

	.  reduce 297 (src line 1687)


state 43
	other_statement:  DESC.force_eof 
	force_eof: .    (829)

	.  reduce 829 (src line 3344)

	force_eof  goto 220

state 44
	other_statement:  DESCRIBE.force_eof 
	force_eof: .    (829)

	.  reduce 829 (src line 3344)

	force_eof  goto 221

state 45
	other_statement:  EXPLAIN.force_eof 
	force_eof: .    (829)

	.  reduce 829 (src line 3344)

	force_eof  goto 222

state 46
	other_statement:  REPAIR.force_eof 
	force_eof: .    (829)

	.  reduce 829 (src line 3344)

	force_eof  goto 223

state 47
	other_statement:  OPTIMIZE.force_eof 
	force_eof: .    (829)

	.  reduce 829 (src line 3344)

	force_eof  goto 224

state 48
	other_statement:  LOCK.TABLES force_eof 

	TABLES  shift 225
	.  error


state 49
	other_statement:  UNLOCK.TABLES force_eof 

	TABLES  shift 226
	.  error


state 50
	load_data_statement:  LOAD.DATA local_opt INFILE STRING INTO TABLE table_name fields lines ins_column_list_opt 

	DATA  shift 227
	.  error


state 51
	union_lhs:  openb.select_statement closeb 

	SELECT  shift 24
	'('  shift 54
	.  error

	select_statement  goto 228
	base_select  goto 22
	union_lhs  goto 23
	openb  goto 51

state 52
	insert_or_replace:  INSERT.    (35)

	.  reduce 35 (src line 429)


state 53
	insert_or_replace:  REPLACE.    (36)

	.  reduce 36 (src line 434)


state 54
	openb:  '('.    (827)

	.  reduce 827 (src line 3329)


state 55
	any_command:  command semicolon_opt.    (1)

	.  reduce 1 (src line 315)


state 56
	semicolon_opt:  ';'.    (3)

	.  reduce 3 (src line 323)


state 57
	select_statement:  base_select order_by_opt.limit_opt lock_opt 
	limit_opt: .    (545)

	LIMIT  shift 230
	.  reduce 545 (src line 2806)

	limit_opt  goto 229

state 58
	order_by_opt:  ORDER.BY order_list 

	BY  shift 231
	.  error


state 59
	select_statement:  union_lhs union_op.union_rhs order_by_opt limit_opt lock_opt 

	SELECT  shift 235
	'('  shift 54
	.  error

	base_select  goto 233
	union_rhs  goto 232
	openb  goto 234

state 60
	union_op:  UNION.    (309)
	union_op:  UNION.ALL 
	union_op:  UNION.DISTINCT 

	ALL  shift 236
	DISTINCT  shift 237
	.  reduce 309 (src line 1742)


state 61
	select_statement:  SELECT comment_opt.cache_opt NEXT num_val for_from table_name 
	base_select:  SELECT comment_opt.cache_opt distinct_opt straight_join_opt select_expression_list from_opt where_expression_opt group_by_opt having_opt 
	cache_opt: .    (312)

	SQL_NO_CACHE  shift 239
	SQL_CACHE  shift 240
	.  reduce 312 (src line 1756)

	cache_opt  goto 238

state 62
	comment_opt:  $$305.comment_list 
	comment_list: .    (307)

	.  reduce 307 (src line 1733)

	comment_list  goto 241

state 63
	stream_statement:  STREAM comment_opt.select_expression FROM table_name 

	OFFSET  shift 132
	EXISTS  shift 252
	DUPLICATE  shift 100
	DEFAULT  shift 249
	KEYS  shift 114
	VALUES  shift 292
	LAST_INSERT_ID  shift 116
	SHARE  shift 150
	MODE  shift 125
	LEFT  shift 283
	RIGHT  shift 284
	'('  shift 54
	ID  shift 250
	HEX  shift 271
	STRING  shift 270
	INTEGRAL  shift 273
	FLOAT  shift 274
	HEXNUM  shift 275
	VALUE_ARG  shift 276
	COMMENT_KEYWORD  shift 92
	BIT_LITERAL  shift 272
	NULL  shift 277
	TRUE  shift 278
	FALSE  shift 279
	NOT  shift 247
	'!'  shift 264
	CASE  shift 291
	'+'  shift 261
	'-'  shift 262
	'*'  shift 243
	MOD  shift 303
	'~'  shift 263
	BINARY  shift 258
	UNDERSCORE_BINARY  shift 259
	UNDERSCORE_UTF8MB4  shift 260
	INTERVAL  shift 265
	VIEW  shift 195
	IF  shift 301
	PRIMARY  shift 138
	SPATIAL  shift 153
	FULLTEXT  shift 105
	FOREIGN  shift 104
	REFERENCES  shift 143
	KEY_BLOCK_SIZE  shift 113
	DATE  shift 95
	REPAIR  shift 145
	OPTIMIZE  shift 134
	TRUNCATE  shift 165
	PARTITION  shift 135
	REORGANIZE  shift 144
	LESS  shift 117
	THAN  shift 157
	PROCEDURE  shift 139
	TRIGGER  shift 164
	VINDEX  shift 196
	VINDEXES  shift 172
	STATUS  shift 155
	VARIABLES  shift 171
	BEGIN  shift 82
	START  shift 154
	TRANSACTION  shift 163
	COMMIT  shift 93
	ROLLBACK  shift 147
	BIT  shift 84
	TINYINT  shift 161
	SMALLINT  shift 152
	MEDIUMINT  shift 123
	INT  shift 109
	INTEGER  shift 110
	BIGINT  shift 83
	REAL  shift 142
	DOUBLE  shift 99
	FLOAT_TYPE  shift 103
	DECIMAL  shift 98
	NUMERIC  shift 131
	TIME  shift 158
	TIMESTAMP  shift 159
	DATETIME  shift 96
	YEAR  shift 179
	CHAR  shift 87
	VARCHAR  shift 170
	BOOL  shift 86
	CHARACTER  shift 88
	VARBINARY  shift 169
	NCHAR  shift 130
	TEXT  shift 156
	TINYTEXT  shift 162
	MEDIUMTEXT  shift 124
	LONGTEXT  shift 121
	BLOB  shift 85
	TINYBLOB  shift 160
	MEDIUMBLOB  shift 122
	LONGBLOB  shift 120
	JSON  shift 112
	ENUM  shift 101
	GEOMETRY  shift 106
	POINT  shift 136
	LINESTRING  shift 119
	POLYGON  shift 137
	GEOMETRYCOLLECTION  shift 107
	MULTIPOINT  shift 127
	MULTILINESTRING  shift 126
	MULTIPOLYGON  shift 128
	SIGNED  shift 151
	UNSIGNED  shift 167
	ZEROFILL  shift 180
	COLLATION  shift 90
	VITESS_KEYSPACES  shift 173
	VITESS_SHARDS  shift 174
	VITESS_TABLETS  shift 175
	VSCHEMA_TABLES  shift 176
	COLUMNS  shift 91
	NAMES  shift 129
	CHARSET  shift 89
	GLOBAL  shift 108
	SESSION  shift 148
	ISOLATION  shift 111
	LEVEL  shift 118
	READ  shift 141
	WRITE  shift 178
	ONLY  shift 133
	REPEATABLE  shift 146
	COMMITTED  shift 94
	UNCOMMITTED  shift 166
	SERIALIZABLE  shift 149
	CURRENT_TIMESTAMP  shift 293
	DATABASE  shift 302
	CURRENT_DATE  shift 299
	CURRENT_TIME  shift 300
	LOCALTIME  shift 297
	LOCALTIMESTAMP  shift 298
	UTC_DATE  shift 296
	UTC_TIME  shift 295
	UTC_TIMESTAMP  shift 294
	REPLACE  shift 304
	CONVERT  shift 285
	CAST  shift 286
	SUBSTR  shift 287
	SUBSTRING  shift 288
	GROUP_CONCAT  shift 290
	MATCH  shift 289
	AGAINST  shift 81
	LANGUAGE  shift 115
	WITH  shift 177
	QUERY  shift 140
	EXPANSION  shift 102
	UNUSED  shift 168
	DATA  shift 97
	.  error

	select_expression  goto 242
	expression  goto 244
	condition  goto 246
	boolean_value  goto 254
	value  goto 253
	value_expression  goto 248
	function_call_keyword  goto 267
	function_call_nonkeyword  goto 268
	function_call_generic  goto 266
	function_call_conflict  goto 269
	row_tuple  goto 281
	tuple_expression  goto 256
	subquery  goto 257
	column_name  goto 255
	non_reserved_keyword  goto 251
	sql_id  goto 280
	table_id  goto 245
	openb  goto 282

state 64
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name opt_partition_clause insert_data on_dup_opt 
	insert_statement:  insert_or_replace comment_opt.ignore_opt into_table_name opt_partition_clause SET update_list on_dup_opt 
	ignore_opt: .    (592)

	IGNORE  shift 183
	.  reduce 592 (src line 3019)

	ignore_opt  goto 305

state 65
	update_statement:  UPDATE comment_opt.table_references SET update_list where_expression_opt order_by_opt limit_opt 

	OFFSET  shift 132
	DUPLICATE  shift 100
	KEYS  shift 114
	LAST_INSERT_ID  shift 116
	SHARE  shift 150
	MODE  shift 125
	'('  shift 54
	ID  shift 193
	COMMENT_KEYWORD  shift 92
	VIEW  shift 195
	PRIMARY  shift 138
	SPATIAL  shift 153
	FULLTEXT  shift 105
	FOREIGN  shift 104
	REFERENCES  shift 143
	KEY_BLOCK_SIZE  shift 113
	DATE  shift 95
	REPAIR  shift 145
	OPTIMIZE  shift 134
	TRUNCATE  shift 165
	PARTITION  shift 135
	REORGANIZE  shift 144
	LESS  shift 117
	THAN  shift 157
	PROCEDURE  shift 139
	TRIGGER  shift 164
	VINDEX  shift 196
	VINDEXES  shift 172
	STATUS  shift 155
	VARIABLES  shift 171
	BEGIN  shift 82
	START  shift 154
	TRANSACTION  shift 163
	COMMIT  shift 93
	ROLLBACK  shift 147
	BIT  shift 84
	TINYINT  shift 161
	SMALLINT  shift 152
	MEDIUMINT  shift 123
	INT  shift 109
	INTEGER  shift 110
	BIGINT  shift 83
	REAL  shift 142
	DOUBLE  shift 99
	FLOAT_TYPE  shift 103
	DECIMAL  shift 98
	NUMERIC  shift 131
	TIME  shift 158
	TIMESTAMP  shift 159
	DATETIME  shift 96
	YEAR  shift 179
	CHAR  shift 87
	VARCHAR  shift 170
	BOOL  shift 86
	CHARACTER  shift 88
	VARBINARY  shift 169
	NCHAR  shift 130
	TEXT  shift 156
	TINYTEXT  shift 162
	MEDIUMTEXT  shift 124
	LONGTEXT  shift 121
	BLOB  shift 85
	TINYBLOB  shift 160
	MEDIUMBLOB  shift 122
	LONGBLOB  shift 120
	JSON  shift 112
	ENUM  shift 101
	GEOMETRY  shift 106
	POINT  shift 136
	LINESTRING  shift 119
	POLYGON  shift 137
	GEOMETRYCOLLECTION  shift 107
	MULTIPOINT  shift 127
	MULTILINESTRING  shift 126
	MULTIPOLYGON  shift 128
	SIGNED  shift 151
	UNSIGNED  shift 167
	ZEROFILL  shift 180
	COLLATION  shift 90
	VITESS_KEYSPACES  shift 173
	VITESS_SHARDS  shift 174
	VITESS_TABLETS  shift 175
	VSCHEMA_TABLES  shift 176
	COLUMNS  shift 91
	NAMES  shift 129
	CHARSET  shift 89
	GLOBAL  shift 108
	SESSION  shift 148
	ISOLATION  shift 111
	LEVEL  shift 118
	READ  shift 141
	WRITE  shift 178
	ONLY  shift 133
	REPEATABLE  shift 146
	COMMITTED  shift 94
	UNCOMMITTED  shift 166
	SERIALIZABLE  shift 149
	AGAINST  shift 81
	LANGUAGE  shift 115
	WITH  shift 177
	QUERY  shift 140
	EXPANSION  shift 102
	UNUSED  shift 168
	DATA  shift 97
	.  error

	table_references  goto 306
	table_reference  goto 307
	table_factor  goto 308
	join_table  goto 309
	table_name  goto 313
	aliased_table_name  goto 310
	subquery  goto 311
	non_reserved_keyword  goto 194
	table_id  goto 192
	openb  goto 312

state 66
	delete_statement:  DELETE comment_opt.FROM table_name opt_partition_clause where_expression_opt order_by_opt limit_opt 
	delete_statement:  DELETE comment_opt.FROM table_name_list USING table_references where_expression_opt 
	delete_statement:  DELETE comment_opt.table_name_list from_or_using table_references where_expression_opt 
